# Informatyka_Systemow_Zlozonych

./: Model_bez_odporności.ipynb  Model_z_odpornością.ipynb  model.ipynb  model_ISZ_DA_PINN.ipynb  params_table_DA.xlsx  pyproject.toml  requirements.txt
data/: base_solution.npy
