[tool.poetry]
name = "informatyka-systemow-zlozonych"
version = "0.1.0"
description = ""
authors = ["Zogfryt <Zogfryt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
